# mrover-workspace

./: .gitignore  build.txt
config/nav/: config.json
jetson/nav/: environment.cpp  environment.hpp  main.cpp  meson.build  rover.cpp  rover.hpp  stateMachine.cpp  stateMachine.hpp  utilities.cpp  utilities.hpp
jetson/nav/gate_search/: gateStateMachine.cpp  gateStateMachine.hpp
jetson/nav/obstacle_avoidance/: obstacleAvoidance.cpp  obstacleAvoidance.hpp  obstacleUnitTests.cpp  test_getBearingDecision.cpp  test_getIdealDesiredBearing.cpp  test_suites.hpp
jetson/nav/search/: searchStateMachine.cpp
jetson/nav/test/: a.h  b.h  main.cpp
pip_deps/: requirements.txt
rover_msgs/: Obstacle.lcm  ObstacleList.lcm
simulators/nav/src/: .eslintrc.js
simulators/nav/src/components/: NavSimulator.vue
simulators/nav/src/components/control_panel/: SimSettings.vue
simulators/nav/src/components/field/: Field.vue  obstacles.ts
simulators/nav/src/components/lcm_center/: ObstacleLCM.vue
simulators/nav/src/components/perception/: Perception.vue  obstacle_detector.ts
simulators/nav/src/store/modules/: fieldState.ts  roverState.ts
simulators/nav/src/utils/: types.ts  utils.ts
